Fixed grey bg from looking weird on mobile

--- a/src/_styles/_backgrounds.scss
+++ b/src/_styles/_backgrounds.scss
@@ -61,5 +61,10 @@ background-image: linear-gradient(-1deg, #F6F6F7 0%, #FEFEFE 38%, #FFFFFF 97%);
 .brand-bg{
   background-color: #FAFAFB;
   background-image: linear-gradient(80deg, #FAFAFB 50%, #ffffff 50%);
-  
+  @media #{$small-only} {
+    background-image: none;
+  }
+  @media #{$medium-only} {
+    background-image: none;
+  }
 }
